[FIX] survey: fix kanban content overlap
Prevent the activity button from overlapping the "See results" button
in the ungrouped kanban mode on small screen sizes.

Prevent the stats text (registered, completed, passed) from overlapping
the separator and the other stats text in the grouped kanban mode on
medium and larger screen sizes.

Task-4061131

closes odoo/odoo#173639

--- a/addons/survey/static/src/scss/survey_survey_views.scss
+++ b/addons/survey/static/src/scss/survey_survey_views.scss
@@ -74,6 +74,14 @@
             position: absolute;
             bottom: 4px;
             right: 19px;
+            @include media-breakpoint-down(lg) {
+                bottom: 19px;
+                right: 0;
+            }
+            @include media-breakpoint-down(sm) {
+                bottom: 10px;
+                right: 10px;
+            }
         }
     }
 
